re-named class column, using character controller, successfully adding character to db

--- a/sinatra_project/app/views/characters/new.erb
+++ b/sinatra_project/app/views/characters/new.erb
@@ -1,6 +1,6 @@
 <h1>Hello from characters!</h1>
 
-<form action="/characters" method="POST">
+<form action="/characters/new" method="POST">
     <label>Name</label><input type="text" name="name">
     <label>Class</label><input type="text" name="class">
     <label>Race</label><input type="text" name="race">
