Create and save characters to database and update foreign key

--- a/sinatra_project/app/views/characters/new.erb
+++ b/sinatra_project/app/views/characters/new.erb
@@ -10,5 +10,5 @@
     <label>Intelligence</label><input type="text" name="intelligence">
     <label>Wisdom</label><input type="text" name="wisdom">
     <label>Charisma</label><input type="text" name="charisma">
-    <input type="submit" value="character_created">
+    <input type="submit" value="create character">
 </form>
