--- a/sinatra_project/app/views/users/show.erb
+++ b/sinatra_project/app/views/users/show.erb
@@ -1,2 +1,2 @@
 <h1>Hello, <%=@user.username%></h1>
-<button onClick="document.location='/characters/new'">Create Character</button>
+<form action="/characters"><input type="submit" value="create character"></form>
