Created an instance variable that gathers all characters associated with user object by foreign key. Also added notes and TODOs

--- a/sinatra_project/app/views/users/show.erb
+++ b/sinatra_project/app/views/users/show.erb
@@ -1,2 +1,4 @@
 <h1>Hello, <%=@user.username%></h1>
+<%# Create a form object that's going to display all characters associated with this user in a list, and put buttons next to them using a formaction="" attribute for edit and kill %>
 <form action="/characters"><input type="submit" value="create character"></form>
+<%# Add a logut button on screen as well %>
