--- a/sinatra_project/app/views/characters/new.erb
+++ b/sinatra_project/app/views/characters/new.erb
@@ -1,4 +1,4 @@
-<h1>Hello from characters!</h1>
+<h1>Create your Character!</h1>
 
 <form action="/characters/new" method="POST">
     <label>Name</label><input type="text" name="name">
