Created a way to log out and clear session

--- a/sinatra_project/app/views/users/show.erb
+++ b/sinatra_project/app/views/users/show.erb
@@ -11,6 +11,8 @@
         <%end%>
 </form>
 
-<form action="/characters/new"><input type="submit" value="create character"></form>
+<form action="/characters/new"><input type="submit" value="create character"></form><br>
+
+<button><a href="/logout">Log out</a></button>
 
 <%# Add a logut button on screen as well %>
