changed input type from text to number so user cannot  enter any incorrect inputs for character stats

--- a/sinatra_project/app/views/characters/new.erb
+++ b/sinatra_project/app/views/characters/new.erb
@@ -4,11 +4,11 @@
     <label>Name</label><input type="text" name="name">
     <label>Class</label><input type="text" name="class">
     <label>Race</label><input type="text" name="race">
-    <label>Strength</label><input type="text" name="strength">
-    <label>Dexterity</label><input type="text" name="dexterity">
-    <label>Constitution</label><input type="text" name="constitution">
-    <label>Intelligence</label><input type="text" name="intelligence">
-    <label>Wisdom</label><input type="text" name="wisdom">
-    <label>Charisma</label><input type="text" name="charisma">
+    <label>Strength</label><input type="number" name="strength">
+    <label>Dexterity</label><input type="number" name="dexterity">
+    <label>Constitution</label><input type="number" name="constitution">
+    <label>Intelligence</label><input type="number" name="intelligence">
+    <label>Wisdom</label><input type="number" name="wisdom">
+    <label>Charisma</label><input type="number" name="charisma">
     <input type="submit" value="create character">
 </form>
