--- a/sinatra_project/app/views/sign_up.erb
+++ b/sinatra_project/app/views/sign_up.erb
@@ -3,5 +3,5 @@
 <form action="/sign_up" method="POST">
     <input type="text" name="username" placeholder="Username:">
     <input type="text" name="password" placeholder="Password:">
-    <input type="submit" value="sign_up">
+    <input type="submit" value="sign up">
 </form>
