--- a/sinatra_project/app/views/characters/edit.erb
+++ b/sinatra_project/app/views/characters/edit.erb
@@ -4,11 +4,11 @@
     <label>Name</label><input type="text" value="<%=@character.name%>" name="name">
     <label>Class</label><input type="text" value="<%=@character.character_class%>" name="class">
     <label>Race</label><input type="text" value="<%=@character.race%>" name="race">
-    <label>Strength</label><input type="text" value="<%=@character.strength%>" name="strength">
-    <label>Dexterity</label><input type="text" value="<%=@character.dexterity%>" name="dexterity">
-    <label>Constitution</label><input type="text" value="<%=@character.constitution%>" name="constitution">
-    <label>Intelligence</label><input type="text" value="<%=@character.intelligence%>" name="intelligence">
-    <label>Wisdom</label><input type="text" value="<%=@character.wisdom%>" name="wisdom">
-    <label>Charisma</label><input type="text" value="<%=@character.charisma%>" name="charisma">
+    <label>Strength</label><input type="number"  value="<%=@character.strength%>" name="strength">
+    <label>Dexterity</label><input type="number"  value="<%=@character.dexterity%>" name="dexterity">
+    <label>Constitution</label><input type="number"  value="<%=@character.constitution%>" name="constitution">
+    <label>Intelligence</label><input type="number"  value="<%=@character.intelligence%>" name="intelligence">
+    <label>Wisdom</label><input type="number"  value="<%=@character.wisdom%>" name="wisdom">
+    <label>Charisma</label><input type="number"  value="<%=@character.charisma%>" name="charisma">
     <input type="submit" value="Edit Character">
 </form>
