--- a/app/views/sign_up.erb
+++ b/app/views/sign_up.erb
@@ -1,7 +1,7 @@
 <h1>Sign up</h1>
 
 <form action="/sign_up" method="POST">
-    <input type="text" name="username" placeholder="Username:">
-    <input type="text" name="password" placeholder="Password:">
+    <input type="text" name="username" placeholder="Username">
+    <input type="password" name="password" placeholder="Password">
     <input type="submit" value="sign up">
 </form>
