--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -1,18 +1,17 @@
 <h1>Hello, <%=@user.username%></h1>
 <%# Create a form object that's going to display all characters associated with this user in a list, and put buttons next to them using a formaction="" attribute for edit and kill %>
 <% @characters.each do |character|%>
-    <form method="POST">
-    
+    <form method="POST" action="/characters/<%=character.id%>">
+        <input type="hidden" value="delete" name="_method">
         name: <%= character.name %><br>
         class: <%= character.character_class %><br>
         race: <%= character.race %><br>
-        <input type="submit" formaction="/characters/<%=character.id%>/edit" value="Edit">
-        <input type="submit" formaction="/characters/<%=character.id%>" value="kill"><br>
+        <button><a href="/characters/<%=character.id%>/edit">Edit</a></button>
+        <input type="submit" value="Kill"><br>
         <%end%>
 </form>
 
 <form action="/characters/new"><input type="submit" value="create character"></form><br>
-
+<button><a href=<%="/characters/#{@user.id}/all"%>>View All</a></button>
 <button><a href="/logout">Log out</a></button>
 
-<%# Add a logut button on screen as well %>
