Created a details page that displays all the attributes for the character

--- a/app/views/characters/all.erb
+++ b/app/views/characters/all.erb
@@ -1,3 +1,3 @@
 <%@characters.each do |character|%>
-    <p><%=character.name%></p>
+    <a href=<%="/characters/#{character.id}/details"%>><%=character.name%></a>
 <%end%>
