Added all required functionality

--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -13,6 +13,6 @@
 </form>
 
 <form action="/characters/new"><input type="submit" value="create character"></form><br>
-<button><a href=<%="/characters/#{@user.id}/all"%>>View All</a></button>
+<button><a href=<%="/characters"%>>View All</a></button>
 <button><a href="/logout">Log out</a></button>
 
